--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 
     implementation project(path: ':progresstextview')
     implementation project(path: ':graphview')
+    implementation project(path: ':flowlayout')
 }
