--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
         <activity android:name=".ProgressTextViewActivity" />
         <activity android:name=".GraphViewActivity" />
         <activity android:name=".FlowLayoutActivity" />
+        <activity android:name=".InvalidEditTextActivity" android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
     </application>
 </manifest>
